fix: fix to maintain aspect ratio of image by preventing stretching

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     justify-content: space-evenly;
     border-bottom: 1px solid #C6C6C6;
     padding: 10px 0;
+    align-items: center;
 }
 
 .logo {
